[gd_scene load_steps=10 format=3 uid="uid://k2y8xqddh408"]

[ext_resource type="Script" path="res://settings.gd" id="1_6ky4r"]
[ext_resource type="Theme" uid="uid://jo1yymi26li8" path="res://ui.tres" id="1_idj8a"]
[ext_resource type="Script" path="res://auto_version_text.gd" id="3_gj4y0"]
[ext_resource type="Material" uid="uid://caravddfeqne" path="res://crt.tres" id="3_q50yk"]
[ext_resource type="AudioStream" uid="uid://15qqhnxq3qsb" path="res://exit.wav" id="4_on51e"]
[ext_resource type="AudioStream" uid="uid://dmj8ftlh3yxqx" path="res://badoop.wav" id="5_tol41"]
[ext_resource type="AudioStream" uid="uid://ckk6et5w8v2ha" path="res://blip.wav" id="10_fdyll"]

[sub_resource type="Environment" id="Environment_qp7m8"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_ljy7n"]
font_size = 26
font_color = Color(1.4, 1.4, 1.4, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("list_of_buttons", "control_button", "fullscreen_button", "vsync_button", "aberration_button", "bloom_button", "trails_button", "particles_button", "vibrations_button", "color_buttons", "color_labels", "color_main_label", "volume_slider", "volume_label", "filter", "world_environment", "select_sound", "exit_sound", "sound_preview")]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 322.0
offset_top = -236.0
offset_right = -322.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_6ky4r")
list_of_buttons = [NodePath("Control Mode"), NodePath("Aberration"), NodePath("Bloom"), NodePath("Trails"), NodePath("Back")]
control_button = NodePath("Control Mode")
fullscreen_button = NodePath("Fullscreen")
vsync_button = NodePath("VSync")
aberration_button = NodePath("Aberration")
bloom_button = NodePath("Bloom")
trails_button = NodePath("Trails")
particles_button = NodePath("Particles")
vibrations_button = NodePath("Vibrations")
color_buttons = [NodePath("HBoxContainer/PlayerColor"), NodePath("HBoxContainer/BallColor"), NodePath("HBoxContainer/EnemyColor")]
color_labels = [NodePath("HBoxContainer/PlayerColor/ButtonLabel"), NodePath("HBoxContainer/BallColor/ButtonLabel"), NodePath("HBoxContainer/EnemyColor/ButtonLabel")]
color_main_label = NodePath("Colors")
volume_slider = NodePath("Volume Slider")
volume_label = NodePath("Volume Label")
filter = NodePath("../ColorRect")
world_environment = NodePath("../WorldEnvironment")
select_sound = NodePath("../SelectSound")
exit_sound = NodePath("../ExitSound")
sound_preview = NodePath("../SoundPreview")

[node name="Control Mode" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Keyboard"

[node name="Fullscreen" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Windowed"

[node name="VSync" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "VSync On"

[node name="Aberration" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Weak Aberr."

[node name="Bloom" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Bloom On"

[node name="Trails" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Trails On"

[node name="Particles" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Particles On"

[node name="Vibrations" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Vibrations On"

[node name="Colors" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Colors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PlayerColor" type="ColorPickerButton" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 38.76)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 1, 0, 1)
edit_alpha = false

[node name="ButtonLabel" type="Label" parent="HBoxContainer/HBoxContainer/PlayerColor"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -11.5
offset_right = 69.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallColor" type="ColorPickerButton" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 38.76)
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="ButtonLabel" type="Label" parent="HBoxContainer/HBoxContainer/BallColor"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -11.5
offset_right = 69.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Ball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyColor" type="ColorPickerButton" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="ButtonLabel" type="Label" parent="HBoxContainer/HBoxContainer/EnemyColor"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -11.5
offset_right = 69.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Opponent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Volume: 100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume Slider" type="HSlider" parent="HBoxContainer"]
layout_mode = 2
step = 5.0
value = 100.0

[node name="Back" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_idj8a")
theme_override_font_sizes/font_size = 26
text = "Back"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qp7m8")

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -184.0
offset_right = 388.0
offset_bottom = -6.0
grow_vertical = 0
text = "Ver Alpha 0.0.4"
label_settings = SubResource("LabelSettings_ljy7n")
vertical_alignment = 2
script = ExtResource("3_gj4y0")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("3_q50yk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_on51e")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tol41")

[node name="SoundPreview" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_fdyll")
max_polyphony = 3

[connection signal="pressed" from="HBoxContainer/Control Mode" to="HBoxContainer" method="_on_control_mode_pressed"]
[connection signal="pressed" from="HBoxContainer/Fullscreen" to="HBoxContainer" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="HBoxContainer/VSync" to="HBoxContainer" method="_on_v_sync_pressed"]
[connection signal="pressed" from="HBoxContainer/Aberration" to="HBoxContainer" method="_on_aberration_pressed"]
[connection signal="pressed" from="HBoxContainer/Bloom" to="HBoxContainer" method="_on_bloom_pressed"]
[connection signal="pressed" from="HBoxContainer/Trails" to="HBoxContainer" method="_on_trails_pressed"]
[connection signal="pressed" from="HBoxContainer/Particles" to="HBoxContainer" method="_on_particles_pressed"]
[connection signal="pressed" from="HBoxContainer/Vibrations" to="HBoxContainer" method="_on_vibrations_pressed"]
[connection signal="color_changed" from="HBoxContainer/HBoxContainer/PlayerColor" to="HBoxContainer" method="_on_color_changed"]
[connection signal="color_changed" from="HBoxContainer/HBoxContainer/BallColor" to="HBoxContainer" method="_on_color_changed"]
[connection signal="color_changed" from="HBoxContainer/HBoxContainer/EnemyColor" to="HBoxContainer" method="_on_color_changed"]
[connection signal="drag_ended" from="HBoxContainer/Volume Slider" to="HBoxContainer" method="_on_volume_slider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/Volume Slider" to="HBoxContainer" method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/Back" to="HBoxContainer" method="_on_back_pressed"]
